前端把名称修改为企业信息管理系统等设置，并添加基本管理界面。

--- a/jeecgboot-vue3/index.html
+++ b/jeecgboot-vue3/index.html
@@ -10,7 +10,7 @@
     />
 
     <title><%= title %></title>
-    <link rel="icon" href="<%= basePublicPath %>/logo.png" />
+    <link rel="icon" href="<%= basePublicPath %>/logo.png" /><!--网页标签上的图标-->
     <!-- 全局配置 -->
     <script>
       window._CONFIG = {};
